# INE5608-2024.02

./: README.html  README.md  TODO.md  linkApresentacao.txt
latex/: .gitignore  article.tex  article.toc
latex/Content/: Requisitos.tex  VisaoGeral.tex
latex/requisitos/: article.tex
latex/requisitos/Content/: Introducao.tex  Requisitos.tex  VisaoGeral.tex
requisitos/: .gitignore  article.tex  references.bib
requisitos/Content/: Introducao.tex  Requisitos.tex
src/: pylintrc  pyproject.toml  requirements.txt
src/alapo/: __main__.py
src/alapo/app/: Alapo.py  Board.py  GraphicalUserInterface.py  Peca.py  Piece.py  Tabuleiro.py  TipoPecaEnum.py  __init__.py  config.py
src/alapo/app/meta/: EventEnum.py  EventManager.py  Process.py  Singleton.py
src/alapo/dog_fmw/config/: game.id  generate_game_id.py
src/alapo/dog_fmw/dog/: dog_actor.py  dog_interface.py  dog_proxy.py  polling_thread.py  start_status.py
visualparadigm/: .gitignore  alapo.vpp
