[tool.poetry]
name = "alapo"
version = "0.1.0"
description = ""
authors = ["Pedro Binotto <pedrosantibinotto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
certifi = "2021.10.8"
charset-normalizer = "2.0.12"
idna = "3.3"
requests = "2.27.1"
urllib3 = "1.26.9"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
experimental = true
in-place = true
recursive = true
verbose = true
ignore = "E402"
max_line_length = 120
aggressive = 2
